fixed hovering issue on mobile

--- a/game/src/styles/Scenario.css
+++ b/game/src/styles/Scenario.css
@@ -31,39 +31,6 @@
     padding: 15px;
 }
 
-.options {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-    min-height: 80px;
-    font-size: medium;
-}
-
-.options-button {
-    font-size: medium;
-    background-color: transparent;
-    border: none;
-    color: #000;
-    padding: 15px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    width: 49%;
-    border-radius: 2px;
-    border: 2px solid #000;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-}
-
-.options-button:hover {
-    background-color: #45a049;
-    border-color: #45a049;
-    color: #fff;
-    /* transform: scale(1.02); */
-}
-
 
 .scenario_container {
     display: flex;
@@ -160,5 +127,39 @@
 
     .scenario_question {
         font-size: smaller;
+    }
+}
+
+.options {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    min-height: 80px;
+    font-size: medium;
+}
+
+.options-button {
+    font-size: medium;
+    background-color: transparent;
+    border: none;
+    color: #000;
+    padding: 15px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    width: 49%;
+    border-radius: 2px;
+    border: 2px solid #000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+@media (hover: hover) {
+    .options-button:hover {
+        background-color: #45a049;
+        border-color: #45a049;
+        color: #fff;
     }
 }
