--- a/game/src/styles/winning.css
+++ b/game/src/styles/winning.css
@@ -16,8 +16,10 @@
     transition: all 0.3s ease;
 }
 
-.win-option-button:hover {
-    background-color: #000;
-    color: #fff;
-    transform: scale(1.05);
+@media (hover: hover) {
+    .win-option-button:hover {
+        background-color: #000;
+        color: #fff;
+        transform: scale(1.05);
+    }
 }
